# Ethereal

./: .gitignore  README.md
client/: Cargo.toml
client/src/: commitment.rs  data.rs  main.rs
src/: Constants.sol  KZGVerifier.sol  MintGem.sol  Pairing.sol
test/: MintNFT.t.sol
